--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "commands": [
     {
       "name": "index",
-      "title": "Todo",
-      "subtitle": "Manage todos",
-      "description": "Manage your todo list with sem-automatic prioritisation",
+      "title": "To-do",
+      "subtitle": "Manage to-dos",
+      "description": "Manage your to-do list with semi-automatic prioritisation",
       "mode": "view"
     }
   ],
