--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "printWidth": 120,
-  "singleQuote": false
+"semi": true,
+"tabWidth": 2,
+"printWidth": 100,
+"singleQuote": true,
+"trailingComma": "all",
+"jsxSingleQuote": true,
+"bracketSpacing": true
 }
