--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "todo",
   "title": "todo",
   "description": "Help managing todos by semi-automatically prioritising",
-  "icon": "command-icon.png",
+  "icon": "extension_icon.png",
   "author": "tpinna",
   "categories": [
     "Productivity"
@@ -13,7 +13,7 @@
     {
       "name": "index",
       "title": "To-do",
-      "subtitle": "Manage to-dos",
+      "subtitle": "Manage and Prioritise to-dos",
       "description": "Manage your to-do list with semi-automatic prioritisation",
       "mode": "view"
     }
